--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body class="centered">
 	<section id="navigation" class="centered">
-		<div id="end-game"><img src="images\YouWin.png" width="100%"/></div>
+		<div id="end-game"><img id="end-game-image" src="images/lose.png" width="100%"/></div>
 		<input type="button" id="play" value="Play" class="btn btn-success btn-lg centered"/>
 		<input type="button" id="versus" value="Versus" class="btn btn-primary btn-lg centered"/>
 		<input type="button" id="playAgain" value="Play Again?" class="btn btn-success btn-lg centered"/>
