--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
 		<input type="button" id="versus" value="Versus" class="btn btn-primary btn-lg centered"/>
 		<input type="button" id="playAgain" value="Play Again?" class="btn btn-success btn-lg centered"/>
 		<div class="form-horizontal" id="userform">
-			<input type="text" id="username" placeholder="Enter username" class="form-control centered"/>
+			<input type="text" id="username" placeholder="Enter username" class="form-control form-control-mobile centered"/>
 			<button class="btn btn-default" id="submitUsername">Submit</button>
+		</div>
+		<div class="form-horizontal" id="versusform">
+			<input type="text" id="playerOne" placeholder="Enter player one username" class="form-control form-control-mobile centered"/>
+			<input type="text" id="playerTwo" placeholder="Enter player two username" class="form-control form-control-mobile centered"/>
+			<button class="btn btn-default" id="submitVersus">Submit</button>
 		</div>
 		<div class="btn-group closed"  id="difficulty">
 			<a data-toggle="dropdown" class="btn btn-default dropdown-toggle" href="#">
@@ -34,8 +39,8 @@
         </div>
 	</section>
 	<section id="gameField" class="centered">
-		<span id="user"></span> vs
-		<span id="opponent"></span>
+		<span id="playerOneName"></span> vs
+		<span id="playerTwoName"></span>
 		<div>
 			<div id="1" class="btn btn-default btn-lg game-tile"></div>
 			<div id="2" class="btn btn-default btn-lg game-tile"></div>
