Add hard and fix impossible

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	        <ul class="dropdown-menu">
 				<li class="difficulty-options">Easy</li>
 				<li class="difficulty-options">Normal</li>
+				<li class="difficulty-options">Hard</li>
 				<li class="difficulty-options">Impossible</li>
 	        </ul>
         </div>
