--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<title>Tic Tac Toe</title>
 		<script type="text/javascript" src="libs/jquery.js"></script>
 		<script type="text/javascript" src="bootstrap.js"></script>
-		<link rel="stylesheet" type="text/css" href="styles/bootstrap-3.2.0-dist/bootstrap-theme.css" />
-		<link rel="stylesheet" type="text/css" href="styles/bootstrap-3.2.0-dist/bootstrap.css" />
-		<link rel="stylesheet" type="text/css" href="styles/util.css" />
+		<link rel="stylesheet" type="text/css" href="styles/bootstrap-3.2.0-dist/bootstrap-theme.min.css" />
+		<link rel="stylesheet" type="text/css" href="styles/bootstrap-3.2.0-dist/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="styles/util.min.css" />
 		
 		<link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
@@ -81,6 +81,6 @@
 	<footer>
 		<button class="btn btn-danger" id="resetGame">Reset game</button>
 	</footer>
-	<script type="text/javascript" src="tictactoe.js"></script>
+	<script type="text/javascript" src="tictactoe.min.js"></script>
 	</body>
 </html>
